# rurpc

./: Cargo.toml
.github/workflows/: rust.yml
baidu-rpc-meta/: Cargo.toml  README.md  build.rs  proto.yml
baidu-rpc-meta/idl/: baidu_rpc_meta.proto
baidu-rpc-meta/src/: lib.rs
protobuf-build/: Cargo.toml
protobuf-build/src/: backend.rs  lib.rs
rpc-demo/: Cargo.toml
rpc-demo/proto-gen/: Cargo.toml  proto.yml
rpc-demo/proto-gen/src/: lib.rs
rurpc-utils/: Cargo.toml
rurpc-utils/src/: atomic_box.rs  atomic_list.rs  lib.rs
